--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorBraon"
-        tools:context=".MainActivity" tools:ignore="ExtraText">
+        tools:context=".MainActivity"
+        tools:ignore="ExtraText">
 
 
    <View
@@ -189,9 +190,11 @@
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:adSize="SMART_BANNER"
-           app:adUnitId="ca-app-pub-7920431183682527/3639868432"
-           app:layout_constraintBottom_toBottomOf="@+id/bgView" app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.333">
+           app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+           app:layout_constraintBottom_toBottomOf="@+id/bgView"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintHorizontal_bias="0.333">
    </com.google.android.gms.ads.AdView>
 
 
