--- a/app/src/main/res/drawable/btnshape.xml
+++ b/app/src/main/res/drawable/btnshape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/colorBanana"
+    <stroke android:color="@color/colorSiviText"
             android:width="1dp"/>
-    <corners android:radius="25dp"/>
+    <corners android:radius="2dp"/>
 </shape>
