--- a/app/src/main/res/drawable/linear.xml
+++ b/app/src/main/res/drawable/linear.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/colorBanana"
+    <stroke android:color="@color/colorSiviText"
             android:width="1dp"/>
-    <corners android:radius="30dp"/>
+    <corners android:radius="2dp"/>
+    <padding android:bottom="5dp"
+             android:left="5dp"
+             android:right="5dp"
+             android:top="5dp"/>
 </shape>
