--- a/app/src/main/res/layout/activity_godisnji_kalendar.xml
+++ b/app/src/main/res/layout/activity_godisnji_kalendar.xml
@@ -8,30 +8,49 @@
         android:layout_height="match_parent"
         tools:context="com.interfacemockup.kalendar.GodisnjiKalendar">
 
-    <Button
-            android:id="@+id/backButton"
-            android:text="@string/back"
-            android:layout_width="328dp"
-            android:layout_height="45dp"
+    <ImageView
+            android:id="@+id/backBtnKalendar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:padding="5dp"
+            android:src="@drawable/arrow"
+            android:background="@drawable/btnshape"
+            android:contentDescription="@string/back_button"
+            android:onClick="home_btn_click"/>
 
     <ListView
-            android:id="@+id/idDvanaestMeseci"
-            android:layout_width="356dp"
-            android:layout_height="626dp"
-            android:background="@color/colorBanana"
-            app:layout_constraintTop_toBottomOf="@+id/backButton"
-            android:layout_margin="16dp"
+            android:id="@+id/idDvanaestMeseciListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="4dp"
+            app:layout_constraintTop_toBottomOf="@+id/backBtnKalendar"
+            android:layout_marginTop="56dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="16dp">
-
+            app:layout_constraintStart_toStartOf="parent">
     </ListView>
+    <TextView
+            android:id="@+id/id_godina_textView"
+            android:text="@string/_2020_godina"
+            android:textColor="@color/colorRosso"
+            android:fontFamily="@font/actor"
+            android:textSize="26sp"
+            android:textStyle="italic"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/backBtnKalendar"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
