--- a/app/src/main/res/layout/dan_cell.xml
+++ b/app/src/main/res/layout/dan_cell.xml
@@ -34,7 +34,7 @@
                 android:text="@string/ime_svetitelja"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
-                android:textAlignment="textStart"
+                android:textAlignment="center"
                 android:textSize="22sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
