--- a/app/src/main/res/layout/dan_cell.xml
+++ b/app/src/main/res/layout/dan_cell.xml
@@ -6,7 +6,7 @@
               android:backgroundTint="@color/colorPrimaryDark"
               android:background="@drawable/linear"
               android:layout_width="match_parent"
-              android:layout_height="250dp">
+              android:layout_height="150dp">
 
 
     <LinearLayout
@@ -27,15 +27,15 @@
             android:padding="5dp"
             android:orientation="vertical"
             android:layout_margin="10dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent">
         <TextView
                 android:id="@+id/id_ime_svetitelja"
                 android:text="@string/ime_svetitelja"
                 android:textColor="#FFFFFF"
-                android:textStyle="bold"
+                android:textStyle="italic"
                 android:textAlignment="center"
-                android:textSize="22sp"
+                android:textSize="16sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -44,9 +44,10 @@
                 android:text="@string/datum"
                 app:layout_constraintTop_toBottomOf="@+id/id_ime_svetitelja"
                 android:layout_marginTop="14dp"
-                android:textSize="19sp"
+                android:textSize="14sp"
                 android:textAlignment="textEnd"
-                android:textColor="@color/colorSiviText"
+                android:textStyle="italic"
+                android:textColor="@color/colorBanana"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
