Popravljeni xml fajlovi

--- a/app/src/main/res/values/April.xml
+++ b/app/src/main/res/values/April.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_april">
-	<string>Свети мученици Хрисант и Дарија, и други с њима</string>
-	<string>Преподобни мученици Јован и други</string>
-	<string>Свети Јаков, епископ и исповедник</string>
-	<string>Свештеномученик Василије, презвитер анкирски</string>
-	<string>Преподобномученик Никон и други</string>
-	<string>Преподобни Захарије</string>
-	<string>БЛАГОВЕСТИ</string>
-	<string>Свети Архангел Гаврил</string>
-	<string>Преподобна Матрона Солунска</string>
-	<string>Преподобни Иларион Нови, исповедник</string>
-	<string>Преподобни Марко Исповедник, епископ Аретусијски у Сирији</string>
-	<string>Преподобни Јован Лествичник</string>
-	<string>Свештеномученик Ипатије Гангријски</string>
-	<string>Света Марија Египћанка</string>
-	<string>Преподобни Тит Чудотворац</string>
-	<string>Преподобни Никита Исповедник </string>
-	<string>Преподобни Јосиф Химнограф</string>
-	<string>Свети мученици Агатопод и Теодул</string>
-	<string>Свети Евтихије Цариградски</string>
-	<string>Преподобни Георгије исповедник</string>
-	<string>Свети апостоли Иродион, Агав, Руф, Асинкрит, Флегонт и Ермије</string>
-	<string>Свети мученик Евпсихије</string>
-	<string>Свети мученици Теренције, Африкан, Максим, Помпије и осталих 36 с њима</string>
-	<string>Свештеномученик Антипа епископ Пергамски, у Азији</string>
-	<string>Преподобни Исаак Сирин II</string>
-	<string>Свети свештеномученик Артемон Лаодикијски</string>
-	<string>Свети Мартин исповедник, папа Римски</string>
-	<string>Свети апостоли Аристарх, Пуд и Трофим</string>
-	<string>Свете мученице Агапија, Хионија и Ирина</string>
-	<string>Преподобни Симеон епископ Персијски</string>
-    </string-array>
+    <item-array name="svetitelji_april">
+	<item>Свети мученици Хрисант и Дарија, и други с њима</item>
+	<item>Преподобни мученици Јован и други</item>
+	<item>Свети Јаков, епископ и исповедник</item>
+	<item>Свештеномученик Василије, презвитер анкирски</item>
+	<item>Преподобномученик Никон и други</item>
+	<item>Преподобни Захарије</item>
+	<item>БЛАГОВЕСТИ</item>
+	<item>Свети Архангел Гаврил</item>
+	<item>Преподобна Матрона Солунска</item>
+	<item>Преподобни Иларион Нови, исповедник</item>
+	<item>Преподобни Марко Исповедник, епископ Аретусијски у Сирији</item>
+	<item>Преподобни Јован Лествичник</item>
+	<item>Свештеномученик Ипатије Гангријски</item>
+	<item>Света Марија Египћанка</item>
+	<item>Преподобни Тит Чудотворац</item>
+	<item>Преподобни Никита Исповедник </item>
+	<item>Преподобни Јосиф Химнограф</item>
+	<item>Свети мученици Агатопод и Теодул</item>
+	<item>Свети Евтихије Цариградски</item>
+	<item>Преподобни Георгије исповедник</item>
+	<item>Свети апостоли Иродион, Агав, Руф, Асинкрит, Флегонт и Ермије</item>
+	<item>Свети мученик Евпсихије</item>
+	<item>Свети мученици Теренције, Африкан, Максим, Помпије и осталих 36 с њима</item>
+	<item>Свештеномученик Антипа епископ Пергамски, у Азији</item>
+	<item>Преподобни Исаак Сирин II</item>
+	<item>Свети свештеномученик Артемон Лаодикијски</item>
+	<item>Свети Мартин исповедник, папа Римски</item>
+	<item>Свети апостоли Аристарх, Пуд и Трофим</item>
+	<item>Свете мученице Агапија, Хионија и Ирина</item>
+	<item>Преподобни Симеон епископ Персијски</item>
+    </item-array>
 </resources>
