--- a/app/src/main/res/values/Oktobar.xml
+++ b/app/src/main/res/values/Oktobar.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_oktobar">
-	<string>Свети Евменије Гортински</string>
-	<string>Свети мученици Трофим, Саватије и Доримедонт</string>
-	<string>Свети великомученик Јевстатије</string>
-	<string>Свети апостол Кодрат (Оданије Воздвижења)</string>
-	<string>Свети свештеномученик Фока</string>
-	<string>Зачеће светог Јована Претече и Крститеља</string>
-	<string>Света првомученица Текла</string>
-	<string>Преподобна Ефросинија</string>
-	<string>Свети апостол и јеванђелист Јован Богослов</string>
-	<string>Свети мученик Калистрат</string>
-	<string>Преподобни Харитон Исповедник</string>
-	<string>Преподобни Киријак Отшелник - Михољдан</string>
-	<string>Свети свештеномученик Григорије</string>
-	<string>Покров Пресвете Богородице</string>
-	<string>Свети свештеномученик Кипријан</string>
-	<string>Свети свештеномученик Дионисије Ареопагит</string>
-	<string>Свети Стефан и Јелена (Штиљановић)</string>
-	<string>Света мученица Харитина</string>
-	<string>Свети апостол Тома - Томиндан</string>
-	<string>Свети мученици Сергије и Вакхо - Срђевдан</string>
-	<string>Преподобна Пелагија-Преподобна Таиса</string>
-	<string>Свети апостол Јаков; свети Стефан српски (Слепи)</string>
-	<string>Свети мученици Евлампије и Евлампија</string>
-	<string>Свети апостол Филип, ђакон</string>
-	<string>Свети мученици Тарах, Пров и Андроник</string>
-	<string>Свети мученик Карп</string>
-	<string>+++ ПРЕПОДОБНА МАТИ ПАРАСКЕВА - СВЕТА ПЕТКА</string>
-	<string>Свети свештеномученик Лукијан</string>
-	<string>Свети мученик Лонгин Сотник</string>
-	<string>Свети пророк Осија; преподобномученик Андреј Критски</string>
-	<string>Свети апостол и јеванђелист Лука; +++ СВЕТИ ПЕТАР ЦЕТИЊСКИ</string>
-    </string-array>
+    <item-array name="svetitelji_oktobar">
+	<item>Свети Евменије Гортински</item>
+	<item>Свети мученици Трофим, Саватије и Доримедонт</item>
+	<item>Свети великомученик Јевстатије</item>
+	<item>Свети апостол Кодрат (Оданије Воздвижења)</item>
+	<item>Свети свештеномученик Фока</item>
+	<item>Зачеће светог Јована Претече и Крститеља</item>
+	<item>Света првомученица Текла</item>
+	<item>Преподобна Ефросинија</item>
+	<item>Свети апостол и јеванђелист Јован Богослов</item>
+	<item>Свети мученик Калистрат</item>
+	<item>Преподобни Харитон Исповедник</item>
+	<item>Преподобни Киријак Отшелник - Михољдан</item>
+	<item>Свети свештеномученик Григорије</item>
+	<item>Покров Пресвете Богородице</item>
+	<item>Свети свештеномученик Кипријан</item>
+	<item>Свети свештеномученик Дионисије Ареопагит</item>
+	<item>Свети Стефан и Јелена (Штиљановић)</item>
+	<item>Света мученица Харитина</item>
+	<item>Свети апостол Тома - Томиндан</item>
+	<item>Свети мученици Сергије и Вакхо - Срђевдан</item>
+	<item>Преподобна Пелагија-Преподобна Таиса</item>
+	<item>Свети апостол Јаков; свети Стефан српски (Слепи)</item>
+	<item>Свети мученици Евлампије и Евлампија</item>
+	<item>Свети апостол Филип, ђакон</item>
+	<item>Свети мученици Тарах, Пров и Андроник</item>
+	<item>Свети мученик Карп</item>
+	<item>+++ ПРЕПОДОБНА МАТИ ПАРАСКЕВА - СВЕТА ПЕТКА</item>
+	<item>Свети свештеномученик Лукијан</item>
+	<item>Свети мученик Лонгин Сотник</item>
+	<item>Свети пророк Осија; преподобномученик Андреј Критски</item>
+	<item>Свети апостол и јеванђелист Лука; +++ СВЕТИ ПЕТАР ЦЕТИЊСКИ</item>
+    </item-array>
 </resources>
