--- a/app/src/main/res/values/Avgust.xml
+++ b/app/src/main/res/values/Avgust.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_avgust">
-	<string>Преподобна Макрина - Свети Стефан, Деспот српски</string>
-	<string>+++ СВЕТИ ПРОРОК ИЛИЈА - ИЛИНДАН</string>
-	<string>Свети пророк Језекиљ</string>
-	<string>Света Марија Магдалена - Блага Марија</string>
-	<string>Свети мученици Трофим, Теофил и други</string>
-	<string>Света великомученица Христина</string>
-	<string>Успеније Свете Ане</string>
-	<string>Преподобномученица Параскева - Петка</string>
-	<string>Свети великомученик Пантелејмон</string>
-	<string>Свети апостоли и ђакони Прохор, Никанор, Тимон и Пармен</string>
-	<string>Свети мученик Калиник</string>
-	<string>Преподобна мати Ангелина српска</string>
-	<string>Свети мученик Евдоким</string>
-	<string>Изношење Часног Крста; св. мученици Макавеји (Почетак поста)</string>
-	<string>Пренос моштију светог првомученика и архиђакона Стефана</string>
-	<string>Преподобни Исакије, Далмат и Фавст</string>
-	<string>Светих седам мученика у Ефесу</string>
-	<string>Свети свештеномученик Евсигније (Претпразништво Преображења)</string>
-	<string>+++ ПРЕОБРАЖЕЊЕ ГОСПОДЊЕ</string>
-	<string>Преподобномученик Дометије</string>
-	<string>Свети Емилијан Исповедник</string>
-	<string>Свети апостол Матија</string>
-	<string>Свети мученик и архиђакон Лаврентије</string>
-	<string>Свети мученик и архиђакон Евпло</string>
-	<string>Свети мученици Фотије, Аникита и други с њима</string>
-	<string>Свети мученик Иполит (Оданије преображења)</string>
-	<string>Свети пророк Михеј (Претпразништво Успенија)</string>
-	<string>+++ УСПЕНИЈЕ ПРЕСВЕТЕ БОГОРОДИЦЕ - ВЕЛИКА ГОСПОЈИНА</string>
-	<string>Свети Јевстатије, Други Арх. српски</string>
-	<string>Свети мученик Патрокло</string>
-	<string>Свети мученик Флор</string>
-    </string-array>
+    <item-array name="svetitelji_avgust">
+	<item>Преподобна Макрина - Свети Стефан, Деспот српски</item>
+	<item>+++ СВЕТИ ПРОРОК ИЛИЈА - ИЛИНДАН</item>
+	<item>Свети пророк Језекиљ</item>
+	<item>Света Марија Магдалена - Блага Марија</item>
+	<item>Свети мученици Трофим, Теофил и други</item>
+	<item>Света великомученица Христина</item>
+	<item>Успеније Свете Ане</item>
+	<item>Преподобномученица Параскева - Петка</item>
+	<item>Свети великомученик Пантелејмон</item>
+	<item>Свети апостоли и ђакони Прохор, Никанор, Тимон и Пармен</item>
+	<item>Свети мученик Калиник</item>
+	<item>Преподобна мати Ангелина српска</item>
+	<item>Свети мученик Евдоким</item>
+	<item>Изношење Часног Крста; св. мученици Макавеји (Почетак поста)</item>
+	<item>Пренос моштију светог првомученика и архиђакона Стефана</item>
+	<item>Преподобни Исакије, Далмат и Фавст</item>
+	<item>Светих седам мученика у Ефесу</item>
+	<item>Свети свештеномученик Евсигније (Претпразништво Преображења)</item>
+	<item>+++ ПРЕОБРАЖЕЊЕ ГОСПОДЊЕ</item>
+	<item>Преподобномученик Дометије</item>
+	<item>Свети Емилијан Исповедник</item>
+	<item>Свети апостол Матија</item>
+	<item>Свети мученик и архиђакон Лаврентије</item>
+	<item>Свети мученик и архиђакон Евпло</item>
+	<item>Свети мученици Фотије, Аникита и други с њима</item>
+	<item>Свети мученик Иполит (Оданије преображења)</item>
+	<item>Свети пророк Михеј (Претпразништво Успенија)</item>
+	<item>+++ УСПЕНИЈЕ ПРЕСВЕТЕ БОГОРОДИЦЕ - ВЕЛИКА ГОСПОЈИНА</item>
+	<item>Свети Јевстатије, Други Арх. српски</item>
+	<item>Свети мученик Патрокло</item>
+	<item>Свети мученик Флор</item>
+    </item-array>
 </resources>
