--- a/app/src/main/res/values/Decembar.xml
+++ b/app/src/main/res/values/Decembar.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_decembar">
-	<string>Свети мученик Платон</string>
-	<string>Свети пророк Авдија</string>
-	<string>Преподобни Григорије Декаполит</string>
-	<string>Ваведење Пресвете Богородице</string>
-	<string>Света Мученица Кикилија (Цицилија)</string>
-	<string>Свети Амфилохије епископ Иконијски</string>
-	<string>Света великомученица Екатерина</string>
-	<string>Свештеномученик Климент епископ Римски</string>
-	<string>Преподобни Алимпије Столпник</string>
-	<string>Свети мученик Јаков Персијанац</string>
-	<string>Преподобномученик Стефан</string>
-	<string>Свети мученици Парамон и Филумен и других 370</string>
-	<string>Свети апостол Андреја Првозвани</string>
-	<string>Свети пророк Наум</string>
-	<string>Свети пророк Авакум</string>
-	<string>Свети пророк Софоније</string>
-	<string>Света великомученица Варвара</string>
-	<string>Преподобни Сава Освећени</string>
-	<string>Свети Николај Чудотворац, архиепископ мирликијски</string>
-	<string>Свети Амвросије, епископ медиолански (милански)</string>
-	<string>Преподобни Патапије</string>
-	<string>Зачеће свете Ане</string>
-	<string>Свети мученици Мина, Ермоген и Евграф</string>
-	<string>Преподобни Данило Столпник</string>
-	<string>Преподобни Спиридон Чудотворац, епископ тримифунтски-Материце</string>
-	<string>Свети мученици Евстратије, Аксентије, Евгеније, Мардарије и Орест</string>
-	<string>Свети мученици Тирс, Левкије и Калиник</string>
-	<string>Свети свештеномученик Елевтерије</string>
-	<string>Свети пророк Агеј</string>
-	<string>Свети пророк Данил и три отрока: Ананије, Азарије и Мисаил</string>
-	<string>Свети мученик Севастијани други с њим</string>
-    </string-array>
+    <item-array name="svetitelji_decembar">
+	<item>Свети мученик Платон</item>
+	<item>Свети пророк Авдија</item>
+	<item>Преподобни Григорије Декаполит</item>
+	<item>Ваведење Пресвете Богородице</item>
+	<item>Света Мученица Кикилија (Цицилија)</item>
+	<item>Свети Амфилохије епископ Иконијски</item>
+	<item>Света великомученица Екатерина</item>
+	<item>Свештеномученик Климент епископ Римски</item>
+	<item>Преподобни Алимпије Столпник</item>
+	<item>Свети мученик Јаков Персијанац</item>
+	<item>Преподобномученик Стефан</item>
+	<item>Свети мученици Парамон и Филумен и других 370</item>
+	<item>Свети апостол Андреја Првозвани</item>
+	<item>Свети пророк Наум</item>
+	<item>Свети пророк Авакум</item>
+	<item>Свети пророк Софоније</item>
+	<item>Света великомученица Варвара</item>
+	<item>Преподобни Сава Освећени</item>
+	<item>Свети Николај Чудотворац, архиепископ мирликијски</item>
+	<item>Свети Амвросије, епископ медиолански (милански)</item>
+	<item>Преподобни Патапије</item>
+	<item>Зачеће свете Ане</item>
+	<item>Свети мученици Мина, Ермоген и Евграф</item>
+	<item>Преподобни Данило Столпник</item>
+	<item>Преподобни Спиридон Чудотворац, епископ тримифунтски-Материце</item>
+	<item>Свети мученици Евстратије, Аксентије, Евгеније, Мардарије и Орест</item>
+	<item>Свети мученици Тирс, Левкије и Калиник</item>
+	<item>Свети свештеномученик Елевтерије</item>
+	<item>Свети пророк Агеј</item>
+	<item>Свети пророк Данил и три отрока: Ананије, Азарије и Мисаил</item>
+	<item>Свети мученик Севастијани други с њим</item>
+    </item-array>
 </resources>
