--- a/app/src/main/res/values/FebruarSmall.xml
+++ b/app/src/main/res/values/FebruarSmall.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_februar_small">
-	<string>Преподобни Макарије Египатски</string>
-	<string>Преподобни Јевтимије Велики</string>
-	<string>Преподобни Максим Исповедник</string>
-	<string>Свети апостол Тимотеј</string>
-	<string>Свештеномученик Климент, епископ анкирски</string>
-	<string>Преподобна Ксенија Римљанка</string>
-	<string>Свети Григорије Богослов, архиепископ цариградски</string>
-	<string>Преподобни Ксенофонт и Марија, и синови њихови Јован и Аркадије</string>
-	<string>Свети Јован Златоуст, златна труба Православља</string>
-	<string>Преподобни Јефрем Сирин</string>
-	<string>Пренос моштију светог Игњатија Богоносца</string>
-	<string>Света Три Јерарха</string>
-	<string>Свети бесребреници Кир и Јован</string>
-	<string>Свети мученик Трифун</string>
-	<string>Сретење Господње</string>
-	<string>Свети Симеон Богопримац</string>
-	<string>Преподобни Исидор Пелусиот</string>
-	<string>Света мученица Агатија</string>
-	<string>Свети Фотије, патријарх цариградски</string>
-	<string>Свети Партеније, епископ лампсакијски</string>
-	<string>Свети великомученик Теодор Стратилат</string>
-	<string>Свети мученик Никифор</string>
-	<string>Свештеномученик Харалампије</string>
-	<string>Свештеномученик Власије</string>
-	<string>Свети Мелетије, архиепископ антиохијски</string>
-	<string>Преподобни Симеон Мироточиви - Стефан Немања</string>
-	<string>Преподобни Авксентије</string>
-	<string>Свети апостол Онисим</string>
-    </string-array>
+    <item-array name="svetitelji_februar_small">
+	<item>Преподобни Макарије Египатски</item>
+	<item>Преподобни Јевтимије Велики</item>
+	<item>Преподобни Максим Исповедник</item>
+	<item>Свети апостол Тимотеј</item>
+	<item>Свештеномученик Климент, епископ анкирски</item>
+	<item>Преподобна Ксенија Римљанка</item>
+	<item>Свети Григорије Богослов, архиепископ цариградски</item>
+	<item>Преподобни Ксенофонт и Марија, и синови њихови Јован и Аркадије</item>
+	<item>Свети Јован Златоуст, златна труба Православља</item>
+	<item>Преподобни Јефрем Сирин</item>
+	<item>Пренос моштију светог Игњатија Богоносца</item>
+	<item>Света Три Јерарха</item>
+	<item>Свети бесребреници Кир и Јован</item>
+	<item>Свети мученик Трифун</item>
+	<item>Сретење Господње</item>
+	<item>Свети Симеон Богопримац</item>
+	<item>Преподобни Исидор Пелусиот</item>
+	<item>Света мученица Агатија</item>
+	<item>Свети Фотије, патријарх цариградски</item>
+	<item>Свети Партеније, епископ лампсакијски</item>
+	<item>Свети великомученик Теодор Стратилат</item>
+	<item>Свети мученик Никифор</item>
+	<item>Свештеномученик Харалампије</item>
+	<item>Свештеномученик Власије</item>
+	<item>Свети Мелетије, архиепископ антиохијски</item>
+	<item>Преподобни Симеон Мироточиви - Стефан Немања</item>
+	<item>Преподобни Авксентије</item>
+	<item>Свети апостол Онисим</item>
+    </item-array>
 </resources>
