--- a/app/src/main/res/values/Jul.xml
+++ b/app/src/main/res/values/Jul.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_jul">
-	<string>Свети мученици Леонтије, Ипатије и Теодул</string>
-	<string>Свети апостол Јуда</string>
-	<string>Свети свештеномученик Методије</string>
-	<string>Свети мученик Јулијан Тарсијски</string>
-	<string>Свети свештеномученик Јевсевије; преподобна Анастасија Српска</string>
-	<string>Света мученица Агрипина</string>
-	<string>+++ РОЂЕЊЕ СВЕТОГ ЈОВАНА ПРЕТЕЧЕ - ИВАЊДАН</string>
-	<string>Света преподобномученица Февронија</string>
-	<string>Преподобни Давид Солунски</string>
-	<string>Преподобни Сампсон Странопримац</string>
-	<string>Пренос моштију св. бесребреника Кира и Јована- Сабор новомученика Дабробосанских и Милешевских</string>
-	<string>+++ СВЕТИ АПОСТОЛИ ПЕТАР И ПАВЛЕ - ПЕТРОВДАН</string>
-	<string>Сабор светих дванаест апостола - Павловдан</string>
-	<string>Свети мученици и бесребреници Козма и Дамјан</string>
-	<string>Полагање ризе Пресвете Богородице</string>
-	<string>Свети мученик Јакинт</string>
-	<string>Свети Андреј Критски - Свети свештеномученик Сава Горњокарловачки</string>
-	<string>Преподобни Атанасије Атонски</string>
-	<string>Преподобни Сисоје Велики</string>
-	<string>Света мученица Недеља</string>
-	<string>Свети великомученик Прокопије</string>
-	<string>Свештеномученик Панкратије</string>
-	<string>Светих 45 мученика из Никопоља-Преподобни Антоније Печерски-Пренос чесне ризе Господа нашег Исуса Христа</string>
-	<string>Света великомученица Ефимија</string>
-	<string>Св. муч. Прокло и Иларије; икона Пресвете Богородице Тројеручице</string>
-	<string>Сабор светог архангела Гаврила</string>
-	<string>Свети апостол Акила</string>
-	<string>Свети мученици Кирик и Јулита</string>
-	<string>Свештеномученик Атиноген</string>
-	<string>Света великомученица Марина - Огњена Марија</string>
-	<string>Свети мученик Емилијан - Свети мученик Јакинт</string>
-    </string-array>
+    <item-array name="svetitelji_jul">
+	<item>Свети мученици Леонтије, Ипатије и Теодул</item>
+	<item>Свети апостол Јуда</item>
+	<item>Свети свештеномученик Методије</item>
+	<item>Свети мученик Јулијан Тарсијски</item>
+	<item>Свети свештеномученик Јевсевије; преподобна Анастасија Српска</item>
+	<item>Света мученица Агрипина</item>
+	<item>+++ РОЂЕЊЕ СВЕТОГ ЈОВАНА ПРЕТЕЧЕ - ИВАЊДАН</item>
+	<item>Света преподобномученица Февронија</item>
+	<item>Преподобни Давид Солунски</item>
+	<item>Преподобни Сампсон Странопримац</item>
+	<item>Пренос моштију св. бесребреника Кира и Јована- Сабор новомученика Дабробосанских и Милешевских</item>
+	<item>+++ СВЕТИ АПОСТОЛИ ПЕТАР И ПАВЛЕ - ПЕТРОВДАН</item>
+	<item>Сабор светих дванаест апостола - Павловдан</item>
+	<item>Свети мученици и бесребреници Козма и Дамјан</item>
+	<item>Полагање ризе Пресвете Богородице</item>
+	<item>Свети мученик Јакинт</item>
+	<item>Свети Андреј Критски - Свети свештеномученик Сава Горњокарловачки</item>
+	<item>Преподобни Атанасије Атонски</item>
+	<item>Преподобни Сисоје Велики</item>
+	<item>Света мученица Недеља</item>
+	<item>Свети великомученик Прокопије</item>
+	<item>Свештеномученик Панкратије</item>
+	<item>Светих 45 мученика из Никопоља-Преподобни Антоније Печерски-Пренос чесне ризе Господа нашег Исуса Христа</item>
+	<item>Света великомученица Ефимија</item>
+	<item>Св. муч. Прокло и Иларије; икона Пресвете Богородице Тројеручице</item>
+	<item>Сабор светог архангела Гаврила</item>
+	<item>Свети апостол Акила</item>
+	<item>Свети мученици Кирик и Јулита</item>
+	<item>Свештеномученик Атиноген</item>
+	<item>Света великомученица Марина - Огњена Марија</item>
+	<item>Свети мученик Емилијан - Свети мученик Јакинт</item>
+    </item-array>
 </resources>
