--- a/app/src/main/res/values/Jun.xml
+++ b/app/src/main/res/values/Jun.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_jun">
-	<string>Свети свештеномученик Патрикије</string>
-	<string>Свети мученик Талалеј</string>
-	<string>+++ СВЕТИ ЦАР КОНСТАНТИН И ЦАРИЦА ЈЕЛЕНА</string>
-	<string>Свети мученик Јован Владимир</string>
-	<string>Преподобни Михајло Исповедник</string>
-	<string>Преподобни Симеон Дивногорац</string>
-	<string>Треће обретење главе светог Јована Крститеља</string>
-	<string>Свети апостол Карп и Алфеј</string>
-	<string>Свети свештеномученик Терапонт</string>
-	<string>Преподобни Никита Исповедник</string>
-	<string>Преподобномученица Теодосија Тирска - Летње (духовске) задушнице</string>
-	<string>Преподобни Исакије Далматски</string>
-	<string>Свети апостол Јерма; Свети мученик Ермије</string>
-	<string>Свети мученик Јустин Философ; Свети Јустин Поповић</string>
-	<string>Свети мученик Никифор</string>
-	<string>Свети мученик Лукилијан</string>
-	<string>Свете Марта и Марија</string>
-	<string>Свети свештеномученик Доротеј-Преподобни Петар Коришки</string>
-	<string>Преподобни Висарион и Иларион Нови (Петровске Покладе)</string>
-	<string>Свети свештеномученик Теодор Анкирски (Почетак поста)</string>
-	<string>Свети великомученик Теодор Стратилат</string>
-	<string>Свети Кирило Александријски</string>
-	<string>Свети свештеномученик Тимотеј Бруски</string>
-	<string>Свети апостоли Вартоломеј и Варнава</string>
-	<string>Преподобни Онуфрије Велики</string>
-	<string>Света мученица Акилина</string>
-	<string>Свети пророк Јелисеј</string>
-	<string>+++СВ. МУЧЕНИК КНЕЗ ЛАЗАР И СВ. СРПСКИ МУЧЕНИЦИ - ВИДОВДАН</string>
-	<string>Свети Тихон Аматунски Чудотворац</string>
-	<string>Свети мученици Мануил, Савел и Исмаил</string>
-    </string-array>
+    <item-array name="svetitelji_jun">
+	<item>Свети свештеномученик Патрикије</item>
+	<item>Свети мученик Талалеј</item>
+	<item>+++ СВЕТИ ЦАР КОНСТАНТИН И ЦАРИЦА ЈЕЛЕНА</item>
+	<item>Свети мученик Јован Владимир</item>
+	<item>Преподобни Михајло Исповедник</item>
+	<item>Преподобни Симеон Дивногорац</item>
+	<item>Треће обретење главе светог Јована Крститеља</item>
+	<item>Свети апостол Карп и Алфеј</item>
+	<item>Свети свештеномученик Терапонт</item>
+	<item>Преподобни Никита Исповедник</item>
+	<item>Преподобномученица Теодосија Тирска - Летње (духовске) задушнице</item>
+	<item>Преподобни Исакије Далматски</item>
+	<item>Свети апостол Јерма; Свети мученик Ермије</item>
+	<item>Свети мученик Јустин Философ; Свети Јустин Поповић</item>
+	<item>Свети мученик Никифор</item>
+	<item>Свети мученик Лукилијан</item>
+	<item>Свете Марта и Марија</item>
+	<item>Свети свештеномученик Доротеј-Преподобни Петар Коришки</item>
+	<item>Преподобни Висарион и Иларион Нови (Петровске Покладе)</item>
+	<item>Свети свештеномученик Теодор Анкирски (Почетак поста)</item>
+	<item>Свети великомученик Теодор Стратилат</item>
+	<item>Свети Кирило Александријски</item>
+	<item>Свети свештеномученик Тимотеј Бруски</item>
+	<item>Свети апостоли Вартоломеј и Варнава</item>
+	<item>Преподобни Онуфрије Велики</item>
+	<item>Света мученица Акилина</item>
+	<item>Свети пророк Јелисеј</item>
+	<item>+++СВ. МУЧЕНИК КНЕЗ ЛАЗАР И СВ. СРПСКИ МУЧЕНИЦИ - ВИДОВДАН</item>
+	<item>Свети Тихон Аматунски Чудотворац</item>
+	<item>Свети мученици Мануил, Савел и Исмаил</item>
+    </item-array>
 </resources>
