--- a/app/src/main/res/values/Maj.xml
+++ b/app/src/main/res/values/Maj.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_majs">
-	<string>Преподобни Јован</string>
-	<string>Преподобни Јован Ветхопештерник</string>
-	<string>Преподобни Теодор Трихина</string>
-	<string>Свети свештеномученик Јануарије</string>
-	<string>Преподобни Теодор Сикеот</string>
-	<string>Свети велико мученик Ђорђе</string>
-	<string>Свети мученик Сава Стратилат</string>
-	<string>Свети апостол и јеванђелист Марко</string>
-	<string>Свештеномученик Василије епископ Амасијски</string>
-	<string>Спаљивање моштију Светог Саве на Врачару</string>
-	<string>Св. апостоли Јасон и Сосипатер, и Керкира девица</string>
-	<string>Свети Василије Острошки</string>
-	<string>Св. апостол Јаков Заведејев</string>
-	<string>Свети пророк Јеремија</string>
-	<string>Свети Атанасије Велики</string>
-	<string>Свети мученици Тимотеј и Мавра</string>
-	<string>Света мученица Пелагија Тарсијска</string>
-	<string>Света великомученица Ирина</string>
-	<string>Свети праведни и многострадални Јов</string>
-	<string>Појава Часног Крста у Јерусалиму</string>
-	<string>Свети Јован Богослов, апостол и јеванђелист</string>
-	<string>ПРЕНОС МОШТИЈУ Св. НИКОЛЕ</string>
-	<string>Свети апостол Симон Зилот</string>
-	<string>Св. ЋИРИЛО И МЕТОДИЈЕ</string>
-	<string>Свети Епифаније, епископ кипарски</string>
-	<string>Света мученица Гликерија</string>
-	<string>Свети мученик Исидор</string>
-	<string>Преподобни Пахомије Велики</string>
-	<string>Преподобни Теодор Освештани</string>
-	<string>Свети апостол Андроник и Јунија</string>
-	<string>Свети мученик Теодор Анкирски</string>
-    </string-array>
+    <item-array name="svetitelji_majs">
+	<item>Преподобни Јован</item>
+	<item>Преподобни Јован Ветхопештерник</item>
+	<item>Преподобни Теодор Трихина</item>
+	<item>Свети свештеномученик Јануарије</item>
+	<item>Преподобни Теодор Сикеот</item>
+	<item>Свети велико мученик Ђорђе</item>
+	<item>Свети мученик Сава Стратилат</item>
+	<item>Свети апостол и јеванђелист Марко</item>
+	<item>Свештеномученик Василије епископ Амасијски</item>
+	<item>Спаљивање моштију Светог Саве на Врачару</item>
+	<item>Св. апостоли Јасон и Сосипатер, и Керкира девица</item>
+	<item>Свети Василије Острошки</item>
+	<item>Св. апостол Јаков Заведејев</item>
+	<item>Свети пророк Јеремија</item>
+	<item>Свети Атанасије Велики</item>
+	<item>Свети мученици Тимотеј и Мавра</item>
+	<item>Света мученица Пелагија Тарсијска</item>
+	<item>Света великомученица Ирина</item>
+	<item>Свети праведни и многострадални Јов</item>
+	<item>Појава Часног Крста у Јерусалиму</item>
+	<item>Свети Јован Богослов, апостол и јеванђелист</item>
+	<item>ПРЕНОС МОШТИЈУ Св. НИКОЛЕ</item>
+	<item>Свети апостол Симон Зилот</item>
+	<item>Св. ЋИРИЛО И МЕТОДИЈЕ</item>
+	<item>Свети Епифаније, епископ кипарски</item>
+	<item>Света мученица Гликерија</item>
+	<item>Свети мученик Исидор</item>
+	<item>Преподобни Пахомије Велики</item>
+	<item>Преподобни Теодор Освештани</item>
+	<item>Свети апостол Андроник и Јунија</item>
+	<item>Свети мученик Теодор Анкирски</item>
+    </item-array>
 </resources>
