--- a/app/src/main/res/values/Mart.xml
+++ b/app/src/main/res/values/Mart.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_mart">
-	<string>Светих дванаест мученика</string>
-	<string>Свети великомученик Теодор Тирон</string>
-	<string>Свети Лав I, папа римски</string>
-	<string>Свети апостоли Архип, Филимон и Апфија</string>
-	<string>Свети Лав, епископ Катански</string>
-	<string>Преподобни Тимотеј</string>
-	<string>Свети мученик Маврикије и седамдесет војника</string>
-	<string>Свети свештеномученик Поликарп, епископ Смирнски</string>
-	<string>Обретење главе Светог Јована Крститеља</string>
-	<string>Свети Тарасије, патријарх Цариградски</string>
-	<string>Свети Порфирије, епископ Гаски</string>
-	<string>Преподобни Прокопије Декаполит</string>
-	<string>Преподобни Василије исповедник</string>
-	<string>Преподобни Јован Касиан.</string>
-	<string>Света преподобномученица Евдокија</string>
-	<string>Свештеномученик Теодот, епископ киринијски, на острву Кипру</string>
-	<string>Свети мученици Евтропије, Клеоник и Василиск</string>
-	<string>Преподобни Герасим Јордански</string>
-	<string>Свети мученик Конон Исавријски</string>
-	<string>Света 42 мученика Аморејска</string>
-	<string>Светих седам свештеномученика херсонских</string>
-	<string>Свети Теофилакт, епископ никомидијски</string>
-	<string>Св. ЧЕТРДЕСЕТ МУЧЕНИКА - МЛАДЕНЦИ</string>
-	<string>Свети мученик Кодрат Коринтски и други с њим</string>
-	<string>Свети Софроније Јерусалимски</string>
-	<string>Преподони Теофан исповедник</string>
-	<string>Свети Никифор, патријарх цариградски</string>
-	<string>Преподобни Бенедикт Нурсијски</string>
-	<string>Свети мученик Агапије и седморица с њим</string>
-	<string>Свети апостол Аристовул</string>
-	<string>Св. АЛЕКСИЈЕ - ЧОВЕК БОЖЈИ</string>
-	<string>Свети Кирил Јерусалимски</string>
-    </string-array>
+    <item-array name="svetitelji_mart">
+	<item>Светих дванаест мученика</item>
+	<item>Свети великомученик Теодор Тирон</item>
+	<item>Свети Лав I, папа римски</item>
+	<item>Свети апостоли Архип, Филимон и Апфија</item>
+	<item>Свети Лав, епископ Катански</item>
+	<item>Преподобни Тимотеј</item>
+	<item>Свети мученик Маврикије и седамдесет војника</item>
+	<item>Свети свештеномученик Поликарп, епископ Смирнски</item>
+	<item>Обретење главе Светог Јована Крститеља</item>
+	<item>Свети Тарасије, патријарх Цариградски</item>
+	<item>Свети Порфирије, епископ Гаски</item>
+	<item>Преподобни Прокопије Декаполит</item>
+	<item>Преподобни Василије исповедник</item>
+	<item>Преподобни Јован Касиан.</item>
+	<item>Света преподобномученица Евдокија</item>
+	<item>Свештеномученик Теодот, епископ киринијски, на острву Кипру</item>
+	<item>Свети мученици Евтропије, Клеоник и Василиск</item>
+	<item>Преподобни Герасим Јордански</item>
+	<item>Свети мученик Конон Исавријски</item>
+	<item>Света 42 мученика Аморејска</item>
+	<item>Светих седам свештеномученика херсонских</item>
+	<item>Свети Теофилакт, епископ никомидијски</item>
+	<item>Св. ЧЕТРДЕСЕТ МУЧЕНИКА - МЛАДЕНЦИ</item>
+	<item>Свети мученик Кодрат Коринтски и други с њим</item>
+	<item>Свети Софроније Јерусалимски</item>
+	<item>Преподони Теофан исповедник</item>
+	<item>Свети Никифор, патријарх цариградски</item>
+	<item>Преподобни Бенедикт Нурсијски</item>
+	<item>Свети мученик Агапије и седморица с њим</item>
+	<item>Свети апостол Аристовул</item>
+	<item>Св. АЛЕКСИЈЕ - ЧОВЕК БОЖЈИ</item>
+	<item>Свети Кирил Јерусалимски</item>
+    </item-array>
 </resources>
