--- a/app/src/main/res/values/Novembar.xml
+++ b/app/src/main/res/values/Novembar.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_novembar">
-	<string>Св. пророк Јоил; преподоб. Прохор Пчињски; Јован Рилски</string>
-	<string>Свети великомученик Артемије</string>
-	<string>Преподобни Иларион; свети Иларион; свети Исповедник Висарион</string>
-	<string>Свети равноапостолни Аверкије јерапољски</string>
-	<string>Свети апостол Јаков, први епископ Јерусалимски - Митровске (затворене) задушнице</string>
-	<string>Свети мученик Арета</string>
-	<string>Свети мученици Маркијан и Мартирије</string>
-	<string>+++ СВЕТИ ВЕЛИКОМУЧЕНИК ДИМИТРИЈЕ - МИТРОВДАН</string>
-	<string>Свети мученик Нестор</string>
-	<string>Свети мученик Терентије</string>
-	<string>Свети Аврамије Затворник; преподобномученица Анастасија Римљанка</string>
-	<string>Свети краљ Милутин</string>
-	<string>Свети апостоли Стахије, Амплије, Урван и други с њима</string>
-	<string>Свети Козма и Дамјан - Врачеви</string>
-	<string>Свети мученици Акиндин, Пигасије и други с њима</string>
-	<string>Пренос моштију Св. Георгија - ЂУРЂИЦ</string>
-	<string>Преподобни Јоаникије Велики; свештеномученик Никандар</string>
-	<string>Преподобномученик Галактион и Епистима</string>
-	<string>Свети Павле Исповедник; преподобни Варлам Хутински</string>
-	<string>Свети мученик Јарон и св. 33 мученика у Мелитини; преподобни Лазар</string>
-	<string>+++ САБОР СВ. АРХАНГЕЛА МИХАИЛА - АРАНЂЕЛОВДАН</string>
-	<string>Свети мученици Онисифор и Порфирије; свети Нектарије Егински</string>
-	<string>Свети апостоли Олимп, Ераст, Родион и други с њима</string>
-	<string>Свети мученик Мина; свети краљ Стефан Дечански - Мратиндан</string>
-	<string>Свети Јован Милостиви; преподобни Нил Синајски</string>
-	<string>Свети Јован Златоусти</string>
-	<string>Свети апостол Филип (Божићне покладе)</string>
-	<string>Свети мученици Гурије, Самон и Авив (Почетак поста)</string>
-	<string>Свети апостол и јеванђелист Матеј</string>
-	<string>Свети Григорије Чудотворац; Свети Никон Радоњешки</string>
-    </string-array>
+    <item-array name="svetitelji_novembar">
+	<item>Св. пророк Јоил; преподоб. Прохор Пчињски; Јован Рилски</item>
+	<item>Свети великомученик Артемије</item>
+	<item>Преподобни Иларион; свети Иларион; свети Исповедник Висарион</item>
+	<item>Свети равноапостолни Аверкије јерапољски</item>
+	<item>Свети апостол Јаков, први епископ Јерусалимски - Митровске (затворене) задушнице</item>
+	<item>Свети мученик Арета</item>
+	<item>Свети мученици Маркијан и Мартирије</item>
+	<item>+++ СВЕТИ ВЕЛИКОМУЧЕНИК ДИМИТРИЈЕ - МИТРОВДАН</item>
+	<item>Свети мученик Нестор</item>
+	<item>Свети мученик Терентије</item>
+	<item>Свети Аврамије Затворник; преподобномученица Анастасија Римљанка</item>
+	<item>Свети краљ Милутин</item>
+	<item>Свети апостоли Стахије, Амплије, Урван и други с њима</item>
+	<item>Свети Козма и Дамјан - Врачеви</item>
+	<item>Свети мученици Акиндин, Пигасије и други с њима</item>
+	<item>Пренос моштију Св. Георгија - ЂУРЂИЦ</item>
+	<item>Преподобни Јоаникије Велики; свештеномученик Никандар</item>
+	<item>Преподобномученик Галактион и Епистима</item>
+	<item>Свети Павле Исповедник; преподобни Варлам Хутински</item>
+	<item>Свети мученик Јарон и св. 33 мученика у Мелитини; преподобни Лазар</item>
+	<item>+++ САБОР СВ. АРХАНГЕЛА МИХАИЛА - АРАНЂЕЛОВДАН</item>
+	<item>Свети мученици Онисифор и Порфирије; свети Нектарије Егински</item>
+	<item>Свети апостоли Олимп, Ераст, Родион и други с њима</item>
+	<item>Свети мученик Мина; свети краљ Стефан Дечански - Мратиндан</item>
+	<item>Свети Јован Милостиви; преподобни Нил Синајски</item>
+	<item>Свети Јован Златоусти</item>
+	<item>Свети апостол Филип (Божићне покладе)</item>
+	<item>Свети мученици Гурије, Самон и Авив (Почетак поста)</item>
+	<item>Свети апостол и јеванђелист Матеј</item>
+	<item>Свети Григорије Чудотворац; Свети Никон Радоњешки</item>
+    </item-array>
 </resources>
