--- a/app/src/main/res/values/Septembar.xml
+++ b/app/src/main/res/values/Septembar.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-    <string-array name="svetitelji_septembar">
-	<string>Свети мученик Андреј Стратилат</string>
-	<string>Свети пророк Самуило</string>
-	<string>Св. апостол Тадеј; св. муч. Васа са децом; св. муч. Рафаило Шишатовачки</string>
-	<string>Свети мученик Агатоник</string>
-	<string>Свети свештеномученик Иринеј</string>
-	<string>Свети свештеномученик Евтихије</string>
-	<string>Пренос мошт. св. ап. Вартоломеја</string>
-	<string>Свети мученици Адријан и Наталија</string>
-	<string>Преподобни Пимен Велики</string>
-	<string>Преподобни Мојсеј Мурин</string>
-	<string>+++ УСЕКОВАЊЕ ГЛАВЕ СВЕТОГ ЈОВАНА КРСТИТЕЉА</string>
-	<string>Пренос моштију светог Александра Невског</string>
-	<string>Полагање појаса Пресвете Богородице; Св. мученици јасеновачки</string>
-	<string>Преподобни Симеон Столпник - црквена Нова година</string>
-	<string>Свети мученик Мамант</string>
-	<string>Свети свештмуч. Антим; свети Јоаникије, Први Патријарх српски</string>
-	<string>Св. свмуч. Вавила; пророк Мојсеј Боговидац; свети Петар Дабробосански</string>
-	<string>Свети пророк Захарије и праведна Јелисавета</string>
-	<string>Чудо светог архангела Михаила; свети мученик Евдоксије</string>
-	<string>Свети мученик Созонт (Претпразништво Рођења Пресвете Богородице)</string>
-	<string>+++ РОЂЕЊЕ ПРЕСВЕТЕ БОГОРОДИЦЕ - МАЛА ГОСПОЈИНА</string>
-	<string>Свети праведни Јоаким и Ана</string>
-	<string>Свете мученице Минодора, Митродора и Нимфодора</string>
-	<string>Преподобна Теодора</string>
-	<string>Св. свештеномученик Автоном (Оданије Рођења Пресвете Богородице)</string>
-	<string>Свети свештеномученик Корнилије (Претпразништво Воздвижења)</string>
-	<string>+++ ВОЗДВИЖЕЊЕ ЧАСНОГ КРСТА - КРСТОВДАН</string>
-	<string>Свети великомученик Никита</string>
-	<string>Св. великомуч. Јефимија</string>
-	<string>Свете мученице Вера, Нада и Љубав и мајка им Софија</string>
-    </string-array>
+    <item-array name="svetitelji_septembar">
+	<item>Свети мученик Андреј Стратилат</item>
+	<item>Свети пророк Самуило</item>
+	<item>Св. апостол Тадеј; св. муч. Васа са децом; св. муч. Рафаило Шишатовачки</item>
+	<item>Свети мученик Агатоник</item>
+	<item>Свети свештеномученик Иринеј</item>
+	<item>Свети свештеномученик Евтихије</item>
+	<item>Пренос мошт. св. ап. Вартоломеја</item>
+	<item>Свети мученици Адријан и Наталија</item>
+	<item>Преподобни Пимен Велики</item>
+	<item>Преподобни Мојсеј Мурин</item>
+	<item>+++ УСЕКОВАЊЕ ГЛАВЕ СВЕТОГ ЈОВАНА КРСТИТЕЉА</item>
+	<item>Пренос моштију светог Александра Невског</item>
+	<item>Полагање појаса Пресвете Богородице; Св. мученици јасеновачки</item>
+	<item>Преподобни Симеон Столпник - црквена Нова година</item>
+	<item>Свети мученик Мамант</item>
+	<item>Свети свештмуч. Антим; свети Јоаникије, Први Патријарх српски</item>
+	<item>Св. свмуч. Вавила; пророк Мојсеј Боговидац; свети Петар Дабробосански</item>
+	<item>Свети пророк Захарије и праведна Јелисавета</item>
+	<item>Чудо светог архангела Михаила; свети мученик Евдоксије</item>
+	<item>Свети мученик Созонт (Претпразништво Рођења Пресвете Богородице)</item>
+	<item>+++ РОЂЕЊЕ ПРЕСВЕТЕ БОГОРОДИЦЕ - МАЛА ГОСПОЈИНА</item>
+	<item>Свети праведни Јоаким и Ана</item>
+	<item>Свете мученице Минодора, Митродора и Нимфодора</item>
+	<item>Преподобна Теодора</item>
+	<item>Св. свештеномученик Автоном (Оданије Рођења Пресвете Богородице)</item>
+	<item>Свети свештеномученик Корнилије (Претпразништво Воздвижења)</item>
+	<item>+++ ВОЗДВИЖЕЊЕ ЧАСНОГ КРСТА - КРСТОВДАН</item>
+	<item>Свети великомученик Никита</item>
+	<item>Св. великомуч. Јефимија</item>
+	<item>Свете мученице Вера, Нада и Љубав и мајка им Софија</item>
+    </item-array>
 </resources>
