Dodata zitija po mesecima.

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -30,6 +30,7 @@
     <EditText
             android:id="@+id/id_info_editText"
             android:layout_width="296dp"
+            android:editable="false"
             android:layout_height="285dp"
             android:inputType="textMultiLine"
             android:gravity="start|top"
