Dodata Zitija za mart,april i maj.

--- a/app/src/main/res/values/ZitijeFebruar_big.xml
+++ b/app/src/main/res/values/ZitijeFebruar_big.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-	<string-array name="februar_big">
+	<string-array name="zitija_februar_big">
 	
 	<item>Мисирац, један од млађих савременика Антонија Великог. Отац му био свештеник. Из послушности према родитељима ожени се, но жена му убрзо умре и он се удаљи у пустињу где проведе пуних шездесет година у труду и борби, унутрашњој и спољашњој, за царство небеско. Кад су га питали, зашто је толико сув и кад једе и кад не једе, он одговори: "Од страха Божијега". Толико је успео очистити свој ум од злих помисли и срце своје од злих жеља да га је Бог обдарио обилатим даром чудотворства, тако да је и мртве из гроба васкрсавао. Његово смирење задивљавало је људе и демоне. Рече му једном демон: "Има само једно, у чему те ја не могу надвладати; то није пост, јер ја не једем никад ништа; то није ни бдење, јер ја не спавам никад". "Него шта је то?" упита га Макарије. "Твоје смирење", одговори демон. Своме ученику Пафнутију говорио је Макарије често: "Не осуђуј никога, и бићеш спасен". Живео је деведесет седам година. Пред смрт на девет дана јавили му се из онога света свети Антоније и свети Пахомије и навестили му да ће кроз девет дана умрети, што се и догоди. Још му се пред саму смрт јавио херувим који му је открио у визији блажени свет небески, похвалио труд и врлину његову и рекао му, да је послат да му узме душу у Царство небеско. Упокојио се 390. године.</item>
 	
