Dodata Zitija za mart,april i maj.

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -35,13 +35,12 @@
             android:layout_width="296dp"
             android:layout_height="285dp"
             android:inputType="textMultiLine"
-            android:gravity="start|top"
             android:ems="10"
             android:textStyle="italic"
             android:fontFamily="@font/actor"
             android:textColor="@color/colorBanana"
             android:textSize="14sp"
-            android:textAlignment="textStart"
+            android:textAlignment="center"
             android:text="@string/info_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
