Dodat Katihizis i AdMob

--- a/app/src/main/res/layout/activity_katihizis.xml
+++ b/app/src/main/res/layout/activity_katihizis.xml
@@ -77,4 +77,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/id_odgovor_textView"
         app:srcCompat="@drawable/ic_headset_48px" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adKatihizis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        app:adSize="SMART_BANNER"
+        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </com.google.android.gms.ads.AdView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
